# lead-followup

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  celery_app.py  config.py  demo.py  logging_config.py  main.py  schemas.py  seed.py  tasks.py  templating.py
app/api/: dashboard.py  health.py  leads.py  simulator.py  webhook.py
app/assistant/: agent.py  guardrail.py  prompts.py  tools.py
app/db/: base.py  models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 4c62a0043225_m1_leads_locations_staff_events.py  7e6c23d19ce7_m3_feedback.py  ac6955deb292_m2_messages_scheduled_touches.py
app/domain/: enums.py  lead_state.py
app/providers/llm/: base.py  claude.py  factory.py  fake.py  gemini.py
app/providers/whatsapp/: base.py  factory.py  meta.py  mock.py
app/services/: cadence.py  dashboard.py  inbound.py  intake.py  leads.py  messages.py  phone.py  templates.py
seeds/: faq.md  sample_leads.csv  templates.json
templates/: base.html  handoff.html  lead_detail.html  overview.html  simulator.html  simulator_list.html
tests/: conftest.py  test_assistant.py  test_cadence.py  test_dashboard.py  test_gemini.py  test_guardrail.py  test_health.py  test_inbound.py  test_intake.py  test_lead_state.py  test_leads_api.py  test_meta_provider.py  test_mock_provider.py  test_phone.py  test_simulator.py  test_templates.py  test_webhook.py
