[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saarthi"
version = "0.0.1"
description = "Saarthi - WhatsApp lead follow-up for auto dealerships"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "celery>=5.3",
    "redis>=5.0",
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Alembic writes these; don't lint generated migrations.
extend-exclude = ["app/db/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
